--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,7 +1,6 @@
 @viewport {
     width: device-width;
     zoom: 1.0;
-    min-width: 500px;
 }
 
 div {
@@ -39,9 +38,9 @@ h1 {
     border-color:white;
     border-width:4px;
     color:DarkOrange;
-    width: calc((100% / 3) - 2%);
+    width: 120px;
     height:48px;
-    margin:1%;
+    margin: 3px;
     float:left;
     text-align: center;
     cursor: default;
@@ -53,9 +52,9 @@ h1 {
     border-color:white;
     border-width:4px;
     color:white;
-    width: calc((100% / 3) - 2%);
+    width: 120px;
     height:48px;
-    margin:1%;
+    margin: 3px;
     float:left;
     text-align: center;
     transition: background-color .5s;
@@ -78,7 +77,7 @@ h1 {
     left:8%;
     right:8%;
     bottom:-30px;
-    max-width:550px;
+    max-width:405px;
 }
 
 #content {
