--- a/stylesheet.css
+++ b/stylesheet.css
@@ -38,9 +38,9 @@ h1 {
     border-color:white;
     border-width:4px;
     color:DarkOrange;
-    width: 120px;
+    width: calc((100% / 3) - 2%);
     height:48px;
-    margin: 3px;
+    margin:1%;
     float:left;
     text-align: center;
     cursor: default;
@@ -52,9 +52,9 @@ h1 {
     border-color:white;
     border-width:4px;
     color:white;
-    width: 120px;
+    width: calc((100% / 3) - 2%);
     height:48px;
-    margin: 3px;
+    margin:1%;
     float:left;
     text-align: center;
     transition: background-color .5s;
@@ -77,7 +77,7 @@ h1 {
     left:8%;
     right:8%;
     bottom:-30px;
-    max-width:405px;
+    max-width:550px;
 }
 
 #content {
