--- a/stylesheet.css
+++ b/stylesheet.css
@@ -61,13 +61,13 @@ h1 {
 }
 
 #nav-bg:hover {
-    background-color:Orange;
+    background-color:#FFB700;
 }
 
 #nav-text {
     font-family: helvetica;
-    font-size: 26px;
-    margin-top: 7px;
+    font-size: calc(18px + (.8vw));
+    margin-top: calc((40px - (18px + (.8vw)))/2);
     text-align: center;
     font-weight: bold;
 }
